Added video and heading picture

--- a/year9_options.html
+++ b/year9_options.html
@@ -147,6 +147,9 @@ for the JavaScript code in this tag.
   </div>
 <div id="stickyribbon">
   </div>
+<center>
+<img src='img/des_eng.jpg' width=33%>
+</center>
 <div id="outline-container-sec-1" class="outline-2 activity">
 <h2 id="sec-1"><span class="section-number-2">1</span> GCSE Design Engineering</h2>
 <div class="outline-text-2" id="text-1">
@@ -154,6 +157,11 @@ for the JavaScript code in this tag.
 <div id="outline-container-sec-1-1" class="outline-3 learn">
 <h3 id="sec-1-1">Learn It</h3>
 <div class="outline-text-3" id="text-1-1">
+<ul class="org-ul">
+<li>Why study Engineering?
+</li>
+</ul>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/zoHm5AXeYYQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <ul class="org-ul">
 <li>To offer a uniquely challenging and enjoyable programme of study, which develops creativity, a logical mind, resilience and problem-solving abilities through the creation of new and original products in our high-spec Design Engineering labs. 
 </li>
@@ -239,8 +247,6 @@ Student projects this year incorporate stepper motor control technology, Servo m
 <h2 id="sec-2"><span class="section-number-2">2</span> Assessment</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-
-
 <div id="outline-container-sec-2-1" class="outline-3 badge">
 <h3 id="sec-2-1">Score It - Examination</h3>
 <div class="outline-text-3" id="text-2-1">
@@ -269,15 +275,9 @@ The exam explores students’ understanding of electronics, materials, modelling
 </ul>
 </div>
 </div>
-
 <div id="outline-container-sec-2-3" class="outline-3 badge">
-<h3 id="sec-2-3">Say</h3>
+<h3 id="sec-2-3">Say It - Student comments</h3>
 <div class="outline-text-3" id="text-2-3">
-<p>
-It - 
-</p>
-
-
 <p>
 “By the end of Year 10, I knew I wanted to be a professional engineer” – Year 11 student
 </p>
