--- a/year9_options.html
+++ b/year9_options.html
@@ -154,9 +154,22 @@ for the JavaScript code in this tag.
 <h2 id="sec-1"><span class="section-number-2">1</span> GCSE Design Engineering</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-sec-1-1" class="outline-3 learn">
-<h3 id="sec-1-1">Learn It</h3>
+<div id="outline-container-sec-1-1" class="outline-3 research">
+<h3 id="sec-1-1">Research It</h3>
 <div class="outline-text-3" id="text-1-1">
+<ul class="org-ul">
+<li>Click on the link below to go to the Edexcel website and download the specification.
+</li>
+<li>Design Engineering will be following the 1DT0/1D (systems) part of the specification.
+</li>
+<li><a href="https://qualifications.pearson.com/en/qualifications/edexcel-gcses/design-and-technology-2017.coursematerials.html#filterQuery=category:Pearson-UK:Category%252FSpecification-and-sample-assessments">Click on this link to go to the Edexcel website</a>
+</li>
+</ul>
+</div>
+</div>
+<div id="outline-container-sec-1-2" class="outline-3 learn">
+<h3 id="sec-1-2">Learn It</h3>
+<div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li>Why study Engineering?
 </li>
@@ -171,18 +184,18 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-sec-1-2" class="outline-3 try">
-<h3 id="sec-1-2">Try It - A new challenge</h3>
-<div class="outline-text-3" id="text-1-2">
+<div id="outline-container-sec-1-3" class="outline-3 try">
+<h3 id="sec-1-3">Try It - A new challenge</h3>
+<div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li>Students will be taught to bring together a number of core skills - the creativity to devise an original product, design skills to create mechanisms and housings, electronic design to control a wide variety of components, programming skills to make everything work and problem solving.  It’s hard work, but as our students consistently report, the sense of satisfaction and pride when they see everything come together and work for the first time is unlike any other, and they will improve their physics and mathematical skills as they develop their skill-set.  We have a VEX robotics team (sponsored by Northrop Grumman), and have established links with local employers such as Warners Midland plc, Park Air Systems and Landis+Gyr, with whom visits are organised to provide first-hand experience of world-class engineering. 
 </li>
 </ul>
 </div>
 </div>
-<div id="outline-container-sec-1-3" class="outline-3 try">
-<h3 id="sec-1-3">Try It - The best results</h3>
-<div class="outline-text-3" id="text-1-3">
+<div id="outline-container-sec-1-4" class="outline-3 try">
+<h3 id="sec-1-4">Try It - The best results</h3>
+<div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li>Design Engineering students have access to all the theory notes they need online from day one, as well as model solutions to past papers.  In addition to this, students enjoy extensive, teacher-supervised access to the Design Engineering labs outside lesson-time, both at breaks and lunchtimes and after School, nearly every day of the week.  Our students are enthusiastic about their work - Sixth Form students are often seen supporting GCSE students in lunchtime sessions, and GCSE students themselves often help those in the Lower School.  
 </li>
@@ -192,9 +205,9 @@ for the JavaScript code in this tag.
 </p>
 </div>
 </div>
-<div id="outline-container-sec-1-4" class="outline-3 try">
-<h3 id="sec-1-4">Try It - The best support</h3>
-<div class="outline-text-3" id="text-1-4">
+<div id="outline-container-sec-1-5" class="outline-3 try">
+<h3 id="sec-1-5">Try It - The best support</h3>
+<div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li>Students will be taught in the well-equipped Design Engineering labs, and have access to all the machines and components that the department has to offer.  Whether tuning a circuit on the oscilloscope, etching PCBs, designing and 3D printing parts or precisely laser-cutting their designs, we have the facilities to realise students’ ideas, and an experienced staff to support them.  
 </li>
@@ -205,9 +218,9 @@ Student projects this year incorporate stepper motor control technology, Servo m
 </div>
 </div>
 
-<div id="outline-container-sec-1-5" class="outline-3 badge">
-<h3 id="sec-1-5">Want It - A stellar career path</h3>
-<div class="outline-text-3" id="text-1-5">
+<div id="outline-container-sec-1-6" class="outline-3 badge">
+<h3 id="sec-1-6">Want It - A stellar career path</h3>
+<div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li>Today’s engineers work in the most exciting and dynamic fields – with career prospects to match.  Perhaps some of our students will study electronics engineering, and play a role in developing the micro-technologies of the future.  
 </li>
@@ -219,9 +232,9 @@ Student projects this year incorporate stepper motor control technology, Servo m
 </div>
 </div>
 
-<div id="outline-container-sec-1-6" class="outline-3 learn">
-<h3 id="sec-1-6">Learn It - Taking it further</h3>
-<div class="outline-text-3" id="text-1-6">
+<div id="outline-container-sec-1-7" class="outline-3 learn">
+<h3 id="sec-1-7">Learn It - Taking it further</h3>
+<div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li>In Year 11, students have the opportunity to apply for prestigious Arkwright Engineering Scholarships, which provide students with bursaries of several hundred pounds of funding to support them through the Sixth Form.  We currently have 3 scholars who passed the entrance exam and interview process at universities.  Through his scholarship, one of our current scholars spent time working with GCHQ, he has been enrolled in the CyberFirst GCHQ program and will be attending days out at GCHQ and Bletchley Park Centre. 
 </li>
@@ -230,9 +243,9 @@ Student projects this year incorporate stepper motor control technology, Servo m
 </ul>
 </div>
 </div>
-<div id="outline-container-sec-1-7" class="outline-3 badge">
-<h3 id="sec-1-7">Badge It - Outline/Structure of Course:</h3>
-<div class="outline-text-3" id="text-1-7">
+<div id="outline-container-sec-1-8" class="outline-3 badge">
+<h3 id="sec-1-8">Badge It - Outline/Structure of Course:</h3>
+<div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li>In Year 10, students’ electronic design, programming and making and design skills will be bolstered, as they make their first complete projects from idea to finished product.  They will develop skills in 2D and 3D modelling, as well as PCB design and construction as they learn to use all the machinery in the Design Engineering labs to produce high-precision products. 
 </li>
