--- a/year9_options.html
+++ b/year9_options.html
@@ -162,7 +162,7 @@ for the JavaScript code in this tag.
 </li>
 <li>Design Engineering will be following the 1DT0/1D (systems) part of the specification.
 </li>
-<li><a href="https://qualifications.pearson.com/en/qualifications/edexcel-gcses/design-and-technology-2017.coursematerials.html#filterQuery=category:Pearson-UK:Category%252FSpecification-and-sample-assessments">Click on this link to go to the Edexcel website</a>
+<li><a href="https://qualifications.pearson.com/en/qualifications/edexcel-gcses/design-and-technology-2017.html">Click on this link to go to the Edexcel website</a>
 </li>
 </ul>
 </div>
