Added YouTube videos

--- a/year9_options.html
+++ b/year9_options.html
@@ -176,6 +176,21 @@ for the JavaScript code in this tag.
 </ul>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/zoHm5AXeYYQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <ul class="org-ul">
+<li>Why is Design and Technology important?
+</li>
+</ul>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1GIyOMoFpks" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<ul class="org-ul">
+<li>Design and Technology at Triumph motorcycles.
+</li>
+</ul>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/3k_8tbuFjGM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<ul class="org-ul">
+<li>Design and Technology at JCB
+</li>
+</ul>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/0kJUmB084Rc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<ul class="org-ul">
 <li>To offer a uniquely challenging and enjoyable programme of study, which develops creativity, a logical mind, resilience and problem-solving abilities through the creation of new and original products in our high-spec Design Engineering labs. 
 </li>
 <li>As far as we know, no other school in the area offers such an advanced and forward-looking Technology curriculum. 
